// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dex reducer default 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
}
`;

exports[`dex reducer orderBookSnapshot 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [
      2,
    ],
    "bids": Array [
      1,
    ],
    "pair": "pair",
    "version": 123,
  },
  "orderBookSubscription": "pair",
}
`;

exports[`dex reducer orderBookSnapshot wrong pair 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [
      2,
    ],
    "bids": Array [
      1,
    ],
    "pair": "pair",
    "version": 123,
  },
  "orderBookSubscription": "pair",
}
`;

exports[`dex reducer orderBookSubscription off 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
}
`;

exports[`dex reducer orderBookSubscription off 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`dex reducer orderBookSubscription off again 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
}
`;

exports[`dex reducer orderBookSubscription on 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "pair",
}
`;

exports[`dex reducer orderBookUpdate 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [
      2,
    ],
    "bids": Array [
      1,
    ],
    "pair": "pair",
    "version": 123,
  },
  "orderBookSubscription": "pair",
}
`;

exports[`dex reducer orderBookUpdate 2`] = `
Array [
  Array [
    Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    Object {
      "pair": "pair",
    },
  ],
]
`;

exports[`dex reducer orderBookUpdate wrong pair 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [
      2,
    ],
    "bids": Array [
      1,
    ],
    "pair": "pair",
    "version": 123,
  },
  "orderBookSubscription": "pair",
}
`;
